mengganti warna tombol menjadi Danger/kuning

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <h5 class="card-title">Card title</h5>
               <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the
                 card's content.</p>
-              <a href="#overlay" class="show btn btn-success btn-info">Show Info</a>
+              <a href="#overlay" class="show btn btn-warning btn-info">Show Info</a>
             </div>
           </div>
 
@@ -122,7 +122,7 @@
               <h5 class="card-title">Card title</h5>
               <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the
                 card's content.</p>
-              <a href="#overlay2" class="show btn btn-success btn-info">Show Info</a>
+              <a href="#overlay2" class="show btn btn-warning btn-info">Show Info</a>
 
             </div>
           </div>
@@ -143,7 +143,7 @@
               <h5 class="card-title">Card title</h5>
               <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the
                 card's content.</p>
-              <a href="#overlay3" class="show btn btn-success btn-info">Show Info</a>
+              <a href="#overlay3" class="show btn btn-warning btn-info">Show Info</a>
 
             </div>
           </div>
@@ -166,7 +166,7 @@
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
-                <a href="#overlay4" class="show btn btn-success btn-info">Show Info</a>
+                <a href="#overlay4" class="show btn btn-warning btn-info">Show Info</a>
 
               </div>
             </div>
@@ -189,7 +189,7 @@
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
-                <a href="#overlay5" class="show btn btn-success btn-info">Show Info</a>
+                <a href="#overlay5" class="show btn btn-warning btn-info">Show Info</a>
 
               </div>
             </div>
@@ -212,7 +212,7 @@
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
-                <a href="#overlay6" class="show btn btn-success btn-info">Show Info</a>
+                <a href="#overlay6" class="show btn btn-warning btn-info">Show Info</a>
 
               </div>
             </div>
