mengganti nama skill yaitu : Bootstrap

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         height="260px" id="back-home">
       <div class="content-teks">
         <h1 class="talent">Mr.Falah</h1>
-        <p class="skill">HTML | CSS | JavaScript | PYTHON</p>
+        <p class="skill">HTML | CSS | JavaScript | Bootstrap</p>
         <p class="logo">Hawk Aye Eagle</p>
         <br>
         <hr class="line">
