menghapus beberapa teks di file:index.html

--- a/index.html
+++ b/index.html
@@ -246,8 +246,7 @@
             vel optio facere! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum fuga commodi consectetur
             maxime repellat voluptas delectus blanditiis inventore? Lorem ipsum dolor sit amet consectetur adipisicing
             elit. Maiores rem vitae quo impedit. Quisquam cum illo ut! Excepturi labore consequuntur nesciunt ratione
-            tempore molestiae? Repellendus eveniet vero fugiat mollitia possimus.
-            yahahhan hayukkkkkkkk
+            tempore molestiae? 
           </p>
         </div>
         <div class="second-teks col-md-6">
